--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -92,7 +92,7 @@
         </div><!--/.container-->
     </section><!--/.jumbotron-->
     <section id="landing-content">
-        <div class="container">
+        <!--div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 ">
                     <article class="col-md-12">
@@ -111,13 +111,13 @@
                     </article>
                 </div>
             </div>
-        </div>
-        <hr class="border-bottom-gray" />
+        </div-->
+        <!--hr class="border-bottom-gray" /-->
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <article class="col-md-12">
-                        <div class="col-md-9 pull-right">
+                        <div class="col-md-9">
                             <h2 class="heading-secondary">¿Cómo se constituye el digesto jurídico?</h2>
                             <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -126,7 +126,7 @@
                             cillum dolore eu fugiat nulla pariatur.</p>
                             <a ng-href="#/ley" title="Ir a Ley 26.939" class="btn btn-primary">Ver Ley 26.939</a>
                         </div>
-                        <figure class="hidden-xs hidden-sm col-md-3 pull-left wow fadeInLeft">
+                        <figure class="hidden-xs hidden-sm col-md-3 wow fadeInRight" data-wow-delay="0.75s">
                             <img src="../images/i_dja.png" alt="Consultas" />
                         </figure>
                     </article>
