add buscar view, remove consultar view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 @import "_common.scss";
 @import "_ley.scss";
+@import "_buscar.scss";
 @import "_normativa.scss";
 @import "_consultas.scss";
 @import "_landing.scss";
