legislacion minor ui changes

--- a/app/styles/_autocomplete.scss
+++ b/app/styles/_autocomplete.scss
@@ -21,8 +21,7 @@
 			&:focus,
 			&:hover
 			{
-				background-color: $color-light-orange;
-				color: white;
+				background-color: $color-soft-gray;
 			}
 			p
 			{
