--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "_ley.scss";
 @import "_buscar.scss";
 @import "_normativa.scss";
+@import "_legislacion.scss";
 @import "_consultas.scss";
 @import "_landing.scss";
 @import "_accordion.scss";
