--- a/app/views/legislacion.html
+++ b/app/views/legislacion.html
@@ -4,7 +4,7 @@
     </div>
 </div><!--/.heading-->
 <section id="legislacion" class="container wow fadeIn">
-    <div class="row">
+    <!--div class="row">
         <form role="form" id="normativa-search" class="col-md-9 col-xs-12 form-inline form-lg">
             <div class="form-group col-md-12 col-xs-12">
                 <div class="col-md-10 col-xs-9">
@@ -12,13 +12,39 @@
                 </div>
                 <button class="btn btn-warning btn-lg pull-right col-md-2 col-xs-3" type="submit" value="Buscar" ng-click="buscar()" >Buscar</button>
             </div>
-        </form><!--/#normativa-search-->
-    </div>
+        </form>
+    </div-->
     <div class="row">
         <section id="legislacion-main">
             <div class="col-md-9 col-xs-12">
                 <section id="legislacion-view">
-                   
+                    <div id="legislacion-view-header" class="row">
+                        <div class="col-sm-9">
+                            <p>Descargar/ver como: </p>
+                            <button class="btn btn-warning">PDF</button>
+                            <button class="btn btn-warning">XML</button>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="col-xs-4">
+                                <button class="btn btn-warning" title="Buscar dentro de la norma">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </div>
+                            <div class="col-xs-4">
+                                <button class="btn btn-warning" title="Enviar por correo">
+                                    <i class="fa fa-envelope-o"></i>
+                                </button>
+                            </div>
+                            <div class="col-xs-4">
+                                <button class="btn btn-warning" title="Imprimir">
+                                    <i class="fa fa-print"></i>
+                            </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <p>vista de la ley</p>
+                    </div>
                 </section><!--/#legislacion-view-->
             </div>
             <div class="col-md-3 col-xs-12">
