--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -238,6 +238,11 @@ ul
 	font-size: $f-font-size-small;
 	font-weight: 400;
 }
+.icon
+{
+	background-color: transparent;
+	border: none;
+}
 .input-group-lg
 {
 	.form-control
