--- a/app/views/legislacion.html
+++ b/app/views/legislacion.html
@@ -19,24 +19,26 @@
             <div class="col-md-9 col-xs-12">
                 <section id="legislacion-view">
                     <div id="legislacion-view-header" class="row">
-                        <div class="col-sm-9">
-                            <p>Descargar/ver como: </p>
-                            <button class="btn btn-warning">PDF</button>
-                            <button class="btn btn-warning">XML</button>
+                        <div class="col-sm-10 col-xs-8">
+                            <div class="row">
+                                <p class="heading-fifth text-bold">Descargar / ver como: </p>
+                                <button class="btn btn-warning">PDF</button>
+                                <button class="btn btn-warning">XML</button>
+                            </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div id="icons-share" class="col-sm-2 col-xs-4">
                             <div class="col-xs-4">
-                                <button class="btn btn-warning" title="Buscar dentro de la norma">
+                                <button class="icon" title="Buscar dentro de la norma">
                                     <i class="fa fa-search"></i>
                                 </button>
                             </div>
                             <div class="col-xs-4">
-                                <button class="btn btn-warning" title="Enviar por correo">
+                                <button class="icon" title="Enviar por correo">
                                     <i class="fa fa-envelope-o"></i>
                                 </button>
                             </div>
                             <div class="col-xs-4">
-                                <button class="btn btn-warning" title="Imprimir">
+                                <button class="icon" title="Imprimir">
                                     <i class="fa fa-print"></i>
                             </button>
                             </div>
