--- a/app/views/legislacion.html
+++ b/app/views/legislacion.html
@@ -20,7 +20,7 @@
                 <section id="legislacion-view">
                     <div id="legislacion-view-header" class="row">
                         <div class="col-sm-10 col-xs-8">
-                            <div class="row">
+                            <div id="icons-download" class="row">
                                 <p class="heading-fifth text-bold">Descargar / ver como: </p>
                                 <button class="btn btn-warning">PDF</button>
                                 <button class="btn btn-warning">XML</button>
@@ -51,7 +51,17 @@
             </div>
             <div class="col-md-3 col-xs-12">
                 <aside id="legislacion-related" class="main-aside">
-                    <h3 class="heading-third heading-aside text-bold">Más normas</h3>
+                    <h2 class="heading-third heading-aside text-bold">Más normas</h2>
+                    <div>
+                        <h3 class="heading-third">Normas relacionadas</h3>
+                        <ul class="list-group">
+                            <li class="list-item">
+                                <p id="list-item-nro-norma" class="text-note">12345</p>
+                                <p id="list-item-codigo" class="text-note">ASA-4040</p>
+                                <h4 class="heading-fourth"><a title="Nombre de la norma" class="text-bold">Archivo Nacional de la Memoria</a></h4>
+                            </li>
+                        </ul>
+                    </div>
                 </aside>
             </div>
         </section><!--/#legislacion-main-->
