--- a/app/views/legislacion.html
+++ b/app/views/legislacion.html
@@ -60,6 +60,16 @@
                                 <p id="list-item-codigo" class="text-note">ASA-4040</p>
                                 <h4 class="heading-fourth"><a title="Nombre de la norma" class="text-bold">Archivo Nacional de la Memoria</a></h4>
                             </li>
+                            <li class="list-item">
+                                <p id="list-item-nro-norma" class="text-note">12345</p>
+                                <p id="list-item-codigo" class="text-note">ASA-4040</p>
+                                <h4 class="heading-fourth"><a title="Nombre de la norma" class="text-bold">Archivo Nacional de la Memoria</a></h4>
+                            </li>
+                            <li class="list-item">
+                                <p id="list-item-nro-norma" class="text-note">12345</p>
+                                <p id="list-item-codigo" class="text-note">ASA-4040</p>
+                                <h4 class="heading-fourth"><a title="Nombre de la norma" class="text-bold">Archivo Nacional de la Memoria</a></h4>
+                            </li>
                         </ul>
                     </div>
                 </aside>
