--- a/app/views/buscar.html
+++ b/app/views/buscar.html
@@ -1,1 +1,12 @@
-<p>This is the buscar view</p>
+<section class="container wow fadeIn">
+	<div class="row">
+	    <form role="form" id="normativa-search" class="col-md-9 col-xs-12 form-inline form-lg">
+	        <div class="form-group col-md-12 col-xs-12">
+	            <div class="col-md-10 col-xs-9">
+	                <input data-autocomplete type="text" class="form-control" id="normativa-input-search" placeholder="Escriba aquí su búsqueda" ng-model="textoBusqueda"/>
+	            </div>
+	            <button class="btn btn-warning btn-lg pull-right col-md-2 col-xs-3" type="submit" value="Buscar" ng-click="buscar()" >Buscar</button>
+	        </div>
+	    </form><!--/#normativa-search-->
+	</div>
+</section>
