--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -5,16 +5,6 @@
 </div><!--/.heading-->
 <section id="normativa" class="container wow fadeIn">
     <div class="row">
-        <form role="form" id="normativa-search" class="col-md-9 col-xs-12 form-inline form-lg">
-            <div class="form-group col-md-12 col-xs-12">
-                <div class="col-md-10 col-xs-9">
-                    <div data-autocomplete type="text" class="form-control" id="normativa-input-search" placeholder="Escriba aquí su búsqueda" ng-model="textoBusqueda"></div>
-                </div>
-                <button class="btn btn-warning btn-lg pull-right col-md-2 col-xs-3" type="submit" value="Buscar" ng-click="buscar()" >Buscar</button>
-            </div>
-        </form><!--/#normativa-search-->
-    </div>
-    <div class="row">
         <section id="normativa-main">
             <div class="col-md-3 col-xs-12 pull-right">
                 <aside id="normativa-filters" class="main-aside">
@@ -27,6 +17,10 @@
                             </section><!--/#normativa-filters-tags-->
                             <div>
                                 <div class="row">
+                                    <div class="form-group col-xs-12">
+                                        <label for="filters-word" class="heading-fourth">Palabra o término</label>
+                                        <input type="text" id="filters-word" class="form-control"/>
+                                    </div>
                                     <div class="form-group col-md-12 col-sm-6">
                                         <label for="filters-categorias" class="heading-fourth">Categoría</label>
                                         <select ng-model="currentCategory" ng-options="category.name for category in categories" class="form-control"  ng-change="addCategoryFilter()">
