--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -84,15 +84,19 @@ ul
 }
 .filters-tags
 {
-	background-color: $color-main-gray;
+	background-color: $color-medium-gray;
 	color: white;
 	font-size: $f-font-size-small;
 	position: relative;
 
+	&:hover
+	{
+		background-color: $color-main-gray;
+	}
 	.fa-remove
 	{
 		display: inline-block;
-		padding: 5px 5px 5px 10px;
+		padding: 0 0 0 5px;
 		text-align: right;
 	}
 }
@@ -375,28 +379,13 @@ ul
 {
 	font-size: $f-font-size-xsmall;
 }
-.show-all
-{
-	border-top: 1px solid $color-light-gray;
-	color: $color-gray;
-	display: block;
-	font-size: $f-font-size-small;
-	margin: 10px 0;
-	padding: 5px 0 0 0;
-
-	&:focus,
-	&:hover
-	{
-		color: $color-main-gray;
-	}
-}
 .tag
 {
 	border: 0;
 	border-radius: $border-radius-small;
 	display: inline-block;
-	margin: 5px 5px 5px 0;
-	padding: 5px 10px;
+	margin: 2px 4px 2px 0;
+	padding: 2px 6px;
 }
 .text-bold
 {
