--- a/app/styles/_normativa.scss
+++ b/app/styles/_normativa.scss
@@ -4,7 +4,7 @@
 /* etiquetas
 
 
-	/* id */
+/* id */
 
 
 #normativa-filters
@@ -20,6 +20,33 @@
 			line-height: 1.2;
 			margin: 30px 0;
 			padding: 0 0 10px 0;
+		}
+	}
+	#filters-options
+	{
+		a
+		{
+			color: $color-main-gray;
+			display: block;
+			font-size: $f-font-size-small;
+			margin: 0 0 10px 0;
+			padding: 5px 0 0 0;
+
+			&:focus,
+			&:hover
+			{
+				color: $color-gray;
+			}
+		}
+		#delete-all
+		{
+			color: $color-light-red;
+			text-align: right;
+
+			&:hover
+			{
+				color: $color-red;
+			}
 		}
 	}
 }
@@ -151,5 +178,14 @@
 				}
 			}
 		}
+	}
+}
+.nav-path-header
+{
+	margin: 0 0 10px 0;
+	
+	#pages
+	{
+		text-align: right;
 	}
 }
