--- a/app/styles/_variables-dja.scss
+++ b/app/styles/_variables-dja.scss
@@ -11,6 +11,7 @@ $color-soft-blue: 			#6edcf5;
 $color-dark-gray:			#444;
 $color-gray:				#666;
 $color-main-gray:			#999;
+$color-medium-gray:			#b9b9b9;
 $color-light-gray:			#cfcfcf;
 $color-soft-gray:			#eee;
 
