--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -5,6 +5,16 @@
 </div><!--/.heading-->
 <section id="normativa" class="container wow fadeIn">
     <div class="row">
+        <form role="form" id="normativa-search" class="col-md-9 col-xs-12 form-inline form-lg">
+            <div class="form-group col-md-12 col-xs-12">
+                <div class="col-md-10 col-xs-9">
+                    <input data-autocomplete type="text" class="form-control" id="normativa-input-search" placeholder="Escriba aquí su búsqueda" ng-model="textoBusqueda"/>
+                </div>
+                <button class="btn btn-warning btn-lg pull-right col-md-2 col-xs-3" type="submit" value="Buscar" ng-click="buscar()" >Buscar</button>
+            </div>
+        </form><!--/#normativa-search-->
+    </div>
+    <div class="row">
         <section id="normativa-main">
             <div class="col-md-3 col-xs-12 pull-right">
                 <aside id="normativa-filters" class="main-aside">
@@ -13,18 +23,21 @@
                             <legend class="heading-third heading-aside text-bold">Filtrar resultados</legend>
                             <section id="normativa-filters-tags" class="filters">
                                 <button class="tag filters-tags" ng-repeat="filter in activeFilters">{{filter.name}} <i class="fa fa-remove" ng-click="deleteFilter('{{filter.value}}')"></i></button>
-                                <a href="#" title="Mostrar todos" ng-show="activeFilters.length > 0 " class="show-all">mostrar todos (+{{activeFilters.length}})</a>
+                                <div id="filters-options">
+                                    <a href="#" title="Mostrar todos" ng-show="activeFilters.length > 0 " id="show-all" class="col-xs-6">mostrar todos (+{{activeFilters.length}})</a>
+                                    <a href="#" title="Borrar todos" id="delete-all" class="col-xs-6">borrar todos (x)</a>
+                                </div>
                             </section><!--/#normativa-filters-tags-->
                             <div>
                                 <div class="row">
                                     <div class="form-group col-xs-12">
                                         <label for="filters-word" class="heading-fourth">Palabra o término</label>
-                                        <input type="text" id="filters-word" class="form-control"/>
+                                        <input type="text" id="filters-word" class="form-control" placeholder="Ej.: matrimonio"/>
                                     </div>
                                     <div class="form-group col-md-12 col-sm-6">
                                         <label for="filters-categorias" class="heading-fourth">Categoría</label>
                                         <select ng-model="currentCategory" ng-options="category.name for category in categories" class="form-control"  ng-change="addCategoryFilter()">
-                                            <option value="NONE" selected disabled>Todas </option>
+                                            <option value="" selected disabled>Todas </option>
                                         </select>
                                     </div>
                                     <div class="form-group col-md-12 col-sm-6">
@@ -66,9 +79,12 @@
                 </aside>
             </div>
             <div class="col-md-9 col-xs-12 pull-left">
-                <div class="nav-path-header" ng-show="showResult">
-                    <div class="col-xs-12">
+                <div class="nav-path-header row" ng-show="showResult">
+                    <div id="results" class="col-sm-8">
                         <p class="text-p"><strong>{{resultadosTotales}}</strong> resultados para <strong>"{{textoBusqueda}}"</strong></p>
+                    </div>
+                    <div id="pages" class="col-sm-4">
+                        <p class="text-p"><strong>1</strong> de <strong>12.967</strong> páginas</p>
                     </div>
                 </div>
                 <section id="normativa-main-list">
